--- a/odin-recipes-main/index.html
+++ b/odin-recipes-main/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Classic Filipino Recipes</title>   
-        <link rel="stylesheet" href="../styles/index-style.css">
+        <link rel="stylesheet" href="../odin-recipes-main/styles/index-style.css">
     </head>
     <body>
         <h1 class="title">Classic Filipino Recipes</h1> 
